Pushed from Domino: https://marcdo77364.cs.domino.tech/workspace/wadkars/ddl-end-to-end-demo?executionId=68b70d604a012d7490bde47b

--- a/service_accounts/service_accounts_mgmt.ipynb
+++ b/service_accounts/service_accounts_mgmt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7de67838-edce-4536-98f1-16c8bb4a1992",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "cbc3ceb0-b430-41a1-99cf-5eee2d3ce001",
    "metadata": {},
    "outputs": [],
@@ -170,10 +170,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4ba9acc6-57ea-4a6e-b25b-041d42cb43ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:8899/v4/serviceAccounts\n",
+      "<Response [200]>\n",
+      "['svc-user-ds-u1', 'svc-admin-u2', 'svc-user-ds-u3']\n"
+     ]
+    }
+   ],
    "source": [
     "print(get_all_service_accounts())"
    ]
@@ -194,10 +204,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e980a0a2-c950-4f34-94bd-506a68b64208",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'username': 'svc-user-ds-u1', 'email': 'svc-user-ds-u1@xyz.com', 'id': '68b9af2aef0f2d1f1e95fdc4', 'idpId': '99d06216-d4bd-444f-9b03-1ed57c28e8ab'}, {'username': 'svc-admin-u2', 'email': 'svc-admin-u2@xyz.com', 'id': '68b9af2b63f3790aeb9ba4b8', 'idpId': '2679d9fa-2efc-4787-a9a5-8800a885de13'}, {'username': 'svc-user-ds-u3', 'email': 'svc-user-ds-u3@xyz.com', 'id': '68b9efbcef0f2d1f1e95fde4', 'idpId': 'd09a9497-0a07-4bb8-8d30-4477c0e6c4e5'}]\n"
+     ]
+    }
+   ],
    "source": [
     "idp_by_user = get_idp_id_by_sa()"
    ]
@@ -247,10 +265,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "97448c8d-5475-4002-afa9-742f5f8ac685",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "    {\n",
+      "        \"name\": \"svc-user-ds-u1-token-app\",\n",
+      "        \"serviceAccountIdpId\": \"99d06216-d4bd-444f-9b03-1ed57c28e8ab\",\n",
+      "        \"isValid\": true,\n",
+      "        \"createdAt\": \"2025-09-05T16:28:17.793Z\",\n",
+      "        \"expiresAt\": \"2026-01-03T16:28:17.783Z\"\n",
+      "    }\n",
+      "]\n",
+      "[\n",
+      "    {\n",
+      "        \"name\": \"svc-admin-u2-token-app\",\n",
+      "        \"serviceAccountIdpId\": \"2679d9fa-2efc-4787-a9a5-8800a885de13\",\n",
+      "        \"isValid\": true,\n",
+      "        \"createdAt\": \"2025-09-05T16:28:18.192Z\",\n",
+      "        \"expiresAt\": \"2026-01-03T16:28:18.177Z\"\n",
+      "    }\n",
+      "]\n",
+      "[\n",
+      "    {\n",
+      "        \"name\": \"svc-user-ds-u3-token-app\",\n",
+      "        \"serviceAccountIdpId\": \"d09a9497-0a07-4bb8-8d30-4477c0e6c4e5\",\n",
+      "        \"isValid\": true,\n",
+      "        \"createdAt\": \"2025-09-05T16:28:18.591Z\",\n",
+      "        \"expiresAt\": \"2026-01-03T16:28:18.581Z\"\n",
+      "    }\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "for user, idpid in idp_by_user.items():\n",
     "    list_all_tokens(idpid)"
@@ -258,10 +310,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "deae52fd-1621-43b3-9e44-6304ece5691f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalidating token svc-user-ds-u1-token-app?\n",
+      "200\n",
+      "Invalidating token svc-admin-u2-token-app?\n",
+      "200\n",
+      "Invalidating token svc-user-ds-u3-token-app?\n",
+      "200\n",
+      "Deleting token svc-user-ds-u1-token-app?\n",
+      "200\n",
+      "Deleting token svc-admin-u2-token-app?\n",
+      "200\n",
+      "Deleting token svc-user-ds-u3-token-app?\n",
+      "200\n"
+     ]
+    }
+   ],
    "source": [
     "## Invalidate and delete tokens examples\n",
     "for user, idpid in idp_by_user.items():    \n",
@@ -277,10 +348,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "884278e9-e3a1-4cfe-b483-05e80e353049",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "201\n",
+      "201\n",
+      "201\n"
+     ]
+    }
+   ],
    "source": [
     "#Now recreate them\n",
     "## Create tokens for SA. Will return status code 200 if succeeded or 500 if it already exists\n",
@@ -580,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "9d82f1d0-6ac5-44ef-98e1-76db5ccc5665",
    "metadata": {},
    "outputs": [],
@@ -609,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "99f2dfc3-85c4-47c9-a445-52075bec5277",
    "metadata": {},
    "outputs": [],
@@ -620,7 +701,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
+   "id": "8f421497-07ad-45a5-b324-a8fe4336e3b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svc_token=os.environ['SVC_ACCOUNT_TOKEN']\n",
+    "svc_token = requests.get(f\"{os.environ['DOMINO_API_PROXY']}/access-token\").text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "e3709329-b7c4-418d-9096-f4b2dad07ee6",
    "metadata": {},
    "outputs": [
@@ -628,7 +720,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'number': 65, 'id': '68d11d8770666558869fbe2b', 'queuedJobHistoryDetails': {'expectedWait': '', 'explanation': 'Your run has been put in a queue for processing.', 'helpText': \"In a few seconds, Domino will start the process of assigning your run to a machine. If the status doesn't change within a minute, please contact your admin team.\"}, 'stageTime': {'submissionTime': 1758535047802}, 'tags': [], 'jobRunCommand': \"ls '/tmp'\", 'usage': None, 'startedBy': {'id': '68b9efbcef0f2d1f1e95fde4', 'username': 'svc-user-ds-u3'}, 'commentsCount': 0, 'title': 'Test Job for SVC Account', 'projectId': '68b08bbfdc77613e66e6364e', 'commitDetails': {'inputCommitId': 'e31e3a85bf6f26f75008aa1630f007407d86e5fa'}, 'dominoStats': [], 'statuses': {'isCompleted': False, 'isArchived': False, 'isScheduled': False, 'executionStatus': 'Queued'}, 'mainRepoGitRef': {'type': 'head'}, 'dependentRepositories': [{'id': '68b08bc0dc77613e66e6364f', 'name': 'ddl-end-to-end-demo', 'uri': 'https://github.com/dominodatalab/ddl-end-to-end-demo.git', 'ref': '(Default branch)', 'serviceProvider': 'github'}], 'dependentDatasetMounts': [], 'dependentProjects': [], 'suggestDatasets': False, 'goalIds': [], 'runLauncherId': None, 'dependentExternalVolumeMounts': [], 'computeCluster': None, 'dataPlane': {'id': '000000000000000000000000', 'name': 'Local', 'namespace': 'domino-compute', 'isLocal': True, 'configuration': {}, 'status': {'state': 'Healthy', 'message': '', 'version': '4.1.1-7', 'lastHeartbeatTimestamp': 1758534988260, 'requiresUpgrade': False}, 'isHealthy': True, 'isArchived': False, 'isFileSyncDisabled': False}, 'snapshotDatasetsOnCompletion': False, 'workflowDetails': None, 'abnormalStatus': None}\n"
+      "{'number': 78, 'id': '68d2f63def77562ced3e28c9', 'queuedJobHistoryDetails': {'expectedWait': '', 'explanation': 'Your run has been put in a queue for processing.', 'helpText': \"In a few seconds, Domino will start the process of assigning your run to a machine. If the status doesn't change within a minute, please contact your admin team.\"}, 'stageTime': {'submissionTime': 1758656061750}, 'tags': [], 'jobRunCommand': \"ls '/tmp'\", 'usage': None, 'startedBy': {'id': '68ac9b59ea374e2b81c48d75', 'username': 'wadkars'}, 'commentsCount': 0, 'title': 'Test Job for SVC Account', 'projectId': '68b08bbfdc77613e66e6364e', 'commitDetails': {'inputCommitId': '61df33930185a5094b7217c4fae9750e979ed267'}, 'dominoStats': [], 'statuses': {'isCompleted': False, 'isArchived': False, 'isScheduled': False, 'executionStatus': 'Queued'}, 'mainRepoGitRef': {'type': 'head'}, 'dependentRepositories': [{'id': '68b08bc0dc77613e66e6364f', 'name': 'ddl-end-to-end-demo', 'uri': 'https://github.com/dominodatalab/ddl-end-to-end-demo.git', 'ref': '(Default branch)', 'serviceProvider': 'github'}], 'dependentDatasetMounts': [{'datasetId': '68b08bc1dc77613e66e63652', 'snapshotId': '68b08bc1dc77613e66e63651', 'snapshotVersion': 0, 'datasetName': 'ddl-end-to-end-demo', 'projectId': '68b08bbfdc77613e66e6364e', 'isInput': False, 'containerPath': '/mnt/data/ddl-end-to-end-demo'}, {'datasetId': '68b8a07b2ad64d0492eb2c97', 'snapshotId': '68b8a07b2ad64d0492eb2c96', 'snapshotVersion': 0, 'datasetName': 'prediction_data', 'projectId': '68b08bbfdc77613e66e6364e', 'isInput': False, 'containerPath': '/mnt/data/prediction_data'}], 'dependentProjects': [], 'suggestDatasets': False, 'goalIds': [], 'runLauncherId': None, 'dependentExternalVolumeMounts': [], 'computeCluster': None, 'dataPlane': {'id': '000000000000000000000000', 'name': 'Local', 'namespace': 'domino-compute', 'isLocal': True, 'configuration': {}, 'status': {'state': 'Healthy', 'message': '', 'version': '4.1.1-7', 'lastHeartbeatTimestamp': 1758656054392, 'requiresUpgrade': False}, 'isHealthy': True, 'isArchived': False, 'isFileSyncDisabled': False}, 'snapshotDatasetsOnCompletion': False, 'workflowDetails': None, 'abnormalStatus': None}\n"
      ]
     }
    ],
@@ -638,7 +730,6 @@
     "import os\n",
     "import requests\n",
     "\n",
-    "svc_token=os.environ['SVC_ACCOUNT_TOKEN']\n",
     "\n",
     "\n",
     "#_class_ Domino(project, api_key=None, host=None, domino_token_file=None, auth_token=None)\n",
