--- a/notebooks/cluster_scaler_client.ipynb
+++ b/notebooks/cluster_scaler_client.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "aa0b7739-6f23-45cf-abe5-81a8c7d6658c",
    "metadata": {},
    "outputs": [],
@@ -15,10 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "de242485-c265-4d63-afbe-79fba181ebfe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bearer eyJhbGciOiJSU\n"
+     ]
+    }
+   ],
    "source": [
     "result = ddl_cluster_scaling_client.get_auth_headers()\n",
     "print(result['Authorization'][0:20])"
@@ -36,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "25616bb9-fd3a-43da-86bf-bdafca9a24bb",
    "metadata": {},
    "outputs": [],
@@ -228,9 +236,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0fb29aad-a3eb-40f3-87ea-5db81a43330c",
+   "metadata": {},
+   "source": [
+    "### Check current status of head and worker nodes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d8284d47-1ae2-4b40-b515-694bf6f6f496",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-09-25T15:14:18Z\n",
+      "ray-68d5457101003e5e51a3c2da\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/restart_status/rayclusters/ray-68d5457101003e5e51a3c2da/worker\n",
+      "Status code 200\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'desired_replicas': 3,\n",
+       " 'evaluated_with': 'statefulset_pods',\n",
+       " 'namespace': 'domino-compute',\n",
+       " 'node_type': 'worker',\n",
+       " 'ok': False,\n",
+       " 'oldestCreationTimestamp': '2025-09-25T13:36:53+00:00',\n",
+       " 'ready_equals_running': True,\n",
+       " 'ready_pods': 3,\n",
+       " 'restarted': False,\n",
+       " 'running_pods': 3,\n",
+       " 'started_at': '2025-09-25T15:14:18+00:00',\n",
+       " 'statefulset': 'ray-68d5457101003e5e51a3c2da-ray-worker',\n",
+       " 'status': 'not_restarted'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import datetime, timezone\n",
+    "\n",
+    "# current UTC datetime in ISO 8601 format with Zulu suffix\n",
+    "current_time = datetime.now(timezone.utc).strftime(\"%Y-%m-%dT%H:%M:%SZ\")\n",
+    "print(current_time)\n",
+    "\n",
+    "\n",
+    "\n",
+    "ddl_cluster_scaling_client.get_cluster_restart_status(cluster_kind = \"rayclusters\",node_type =\"worker\",restart_ts=current_time)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eca9b144-a913-491c-a7fb-224a06d350c1",
+   "id": "81950204-a490-460f-bd56-4ebfe75b65b4",
    "metadata": {},
    "outputs": [],
    "source": []
