Pushed from Domino: https://marcdo77364.cs.domino.tech/workspace/wadkars/ddl-end-to-end-demo?executionId=68b70d604a012d7490bde47b

--- a/notebooks/cluster_scaler_client.ipynb
+++ b/notebooks/cluster_scaler_client.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "aa0b7739-6f23-45cf-abe5-81a8c7d6658c",
    "metadata": {},
    "outputs": [],
@@ -15,18 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "de242485-c265-4d63-afbe-79fba181ebfe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bearer eyJhbGciOiJSU\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "result = ddl_cluster_scaling_client.get_auth_headers()\n",
     "print(result['Authorization'][0:20])"
@@ -44,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "25616bb9-fd3a-43da-86bf-bdafca9a24bb",
    "metadata": {},
    "outputs": [],
@@ -118,7 +110,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "restart_ts=\"2025-09-24T14:54:56Z\"\n",
     "ddl_cluster_scaling_client.wait_until_scaling_complete(cluster_kind=cluster_kind,scale_start_ts=restart_ts)"
    ]
   },
@@ -245,51 +236,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d8284d47-1ae2-4b40-b515-694bf6f6f496",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2025-09-25T15:14:18Z\n",
-      "ray-68d5457101003e5e51a3c2da\n",
-      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/restart_status/rayclusters/ray-68d5457101003e5e51a3c2da/worker\n",
-      "Status code 200\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'desired_replicas': 3,\n",
-       " 'evaluated_with': 'statefulset_pods',\n",
-       " 'namespace': 'domino-compute',\n",
-       " 'node_type': 'worker',\n",
-       " 'ok': False,\n",
-       " 'oldestCreationTimestamp': '2025-09-25T13:36:53+00:00',\n",
-       " 'ready_equals_running': True,\n",
-       " 'ready_pods': 3,\n",
-       " 'restarted': False,\n",
-       " 'running_pods': 3,\n",
-       " 'started_at': '2025-09-25T15:14:18+00:00',\n",
-       " 'statefulset': 'ray-68d5457101003e5e51a3c2da-ray-worker',\n",
-       " 'status': 'not_restarted'}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datetime import datetime, timezone\n",
     "\n",
     "# current UTC datetime in ISO 8601 format with Zulu suffix\n",
     "current_time = datetime.now(timezone.utc).strftime(\"%Y-%m-%dT%H:%M:%SZ\")\n",
-    "print(current_time)\n",
-    "\n",
-    "\n",
+    "print(current_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f2fb9fc-a160-47a4-9c44-418cfa3058c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "ddl_cluster_scaling_client.get_cluster_restart_status(cluster_kind = \"rayclusters\",node_type =\"worker\",restart_ts=current_time)"
    ]
@@ -298,6 +263,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "81950204-a490-460f-bd56-4ebfe75b65b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ddl_cluster_scaling_client.get_cluster_restart_status(cluster_kind = \"rayclusters\",node_type =\"head\",restart_ts=current_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38610ba3-7787-42ba-9a48-a8c39da6e494",
    "metadata": {},
    "outputs": [],
    "source": []
