Support local ray training
Pushed from Domino: https://marcdo77364.cs.domino.tech/workspace/wadkars/ddl-end-to-end-demo?executionId=68b70d604a012d7490bde47b

--- a/notebooks/basic_ray_job.ipynb
+++ b/notebooks/basic_ray_job.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a0a54bc1-58ed-42ae-ae0c-341a0ca2d442",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1336f048-16eb-441b-9c12-74309c613578",
    "metadata": {},
    "outputs": [
@@ -21,13 +21,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-09-23 11:53:33,697\tINFO util.py:154 -- Outdated packages:\n",
+      "2025-09-30 15:04:50,468\tINFO util.py:154 -- Outdated packages:\n",
       "  ipywidgets==7.7.5 found, needs ipywidgets>=8\n",
       "Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n",
-      "2025-09-23 11:53:33,777\tINFO util.py:154 -- Outdated packages:\n",
+      "2025-09-30 15:04:50,548\tINFO util.py:154 -- Outdated packages:\n",
       "  ipywidgets==7.7.5 found, needs ipywidgets>=8\n",
       "Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n",
-      "2025-09-23 11:53:33,927\tINFO util.py:154 -- Outdated packages:\n",
+      "2025-09-30 15:04:50,621\tINFO util.py:154 -- Outdated packages:\n",
       "  ipywidgets==7.7.5 found, needs ipywidgets>=8\n",
       "Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
      ]
@@ -68,11 +68,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "129018e0-7750-40d8-8b4b-b0333bcc1d5f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "4fe473df-6ff9-4cce-8bbf-10f4493cb6dd",
    "metadata": {},
    "source": [
-    "## Pre-requsites\n",
+    "## Pre-requsites - When using S3 bucket\n",
     "\n",
     "Configure the following user environment variables\n",
     "\n",
@@ -82,7 +90,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
+   "id": "83111d82-fcdd-4b35-a491-f714007b3527",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'UserId': 'AROA5YW464O6S35MGC2WL:botocore-session-1759244695', 'Account': '946429944765', 'Arn': 'arn:aws:sts::946429944765:assumed-role/sameer-irsa-full-bucket-role/botocore-session-1759244695', 'ResponseMetadata': {'RequestId': '2264d126-438a-4bbf-8946-2bb5ac820a71', 'HTTPStatusCode': 200, 'HTTPHeaders': {'x-amzn-requestid': '2264d126-438a-4bbf-8946-2bb5ac820a71', 'x-amz-sts-extended-request-id': 'MTp1cy13ZXN0LTI6MTc1OTI0NDY5NTk4MjpSOkpFcjh5MDhj', 'content-type': 'text/xml', 'content-length': '489', 'date': 'Tue, 30 Sep 2025 15:04:55 GMT'}, 'RetryAttempts': 0}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Verify your role identity in AWS\n",
+    "import boto3\n",
+    "sts = boto3.client(\"sts\")\n",
+    "identity = sts.get_caller_identity()\n",
+    "print(identity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "46eb3e5a-835a-4942-9fbb-2bc685605ed8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Load dataset\n",
+    "data = fetch_california_housing(as_frame=True)\n",
+    "df = data.frame.rename(columns={\"MedHouseVal\": \"median_house_value\"})\n",
+    "\n",
+    "# Split\n",
+    "train, tmp = train_test_split(df, test_size=0.3, random_state=42)\n",
+    "val, test  = train_test_split(tmp, test_size=0.5, random_state=42)\n",
+    "\n",
+    "# Save locally\n",
+    "train.to_parquet(\"/tmp/train.parquet\", index=False)\n",
+    "val.to_parquet(\"/tmp/val.parquet\", index=False)\n",
+    "test.to_parquet(\"/tmp/test.parquet\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "d8af9bda-73fe-4dde-b2b5-c9c6e54ee9e0",
    "metadata": {},
    "outputs": [
@@ -98,37 +154,86 @@
    ],
    "source": [
     "# Download dataset and push to S3\n",
-    "\n",
-    "# Load dataset\n",
-    "data = fetch_california_housing(as_frame=True)\n",
-    "df = data.frame.rename(columns={\"MedHouseVal\": \"median_house_value\"})\n",
-    "\n",
-    "# Split\n",
-    "train, tmp = train_test_split(df, test_size=0.3, random_state=42)\n",
-    "val, test  = train_test_split(tmp, test_size=0.5, random_state=42)\n",
-    "\n",
-    "# Save locally\n",
-    "train.to_parquet(\"/tmp/train.parquet\", index=False)\n",
-    "val.to_parquet(\"/tmp/val.parquet\", index=False)\n",
-    "test.to_parquet(\"/tmp/test.parquet\", index=False)\n",
-    "\n",
     "# Push to S3\n",
     "!aws s3 cp /tmp/train.parquet s3://${S3_BUCKET_NAME}/end-to-end/california/train/\n",
     "!aws s3 cp /tmp/val.parquet   s3://${S3_BUCKET_NAME}/end-to-end/california/val/\n",
-    "!aws s3 cp /tmp/test.parquet  s3://${S3_BUCKET_NAME}/end-to-end/california/test/"
+    "!aws s3 cp /tmp/test.parquet  s3://${S3_BUCKET_NAME}/end-to-end/california/test/\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e1aa7ff-e653-40af-9e36-9faa8a0ff5b3",
+   "metadata": {},
+   "source": [
+    "## Pre-requsites - When using a Domino dataset\n",
+    "\n",
+    "If you are working on your own project there will be a dataset with the same name as the project. Configure the env variable\n",
+    "`DATASET_NAME` below to that dataset name. If not associate a dataset you have permissions to for your project and name the \n",
+    "environment variable accordingly.\n",
+    "\n",
+    "Also note that the `ROOT_DOMINO_DATASET_FOLDER` is `/mnt/data` for a git backed project. For a Domino File System backed project it is `/domino/datasets/local/`\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7040bd1-cd6e-4be0-98d9-2f90d4a527ec",
+   "id": "030ee63e-3378-4777-ad4b-0a0192a448d6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ROOT_DOMINO_DATASET_FOLDER = \"/mnt/data\" #For DFS based project use /domino/datasets/local/\n",
+    "DATASET_NAME=\"ddl-end-to-end-demo"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
+   "id": "d1897eb5-a71b-41b1-b8d9-2e85a0709eea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copied /tmp/train.parquet -> /mnt/data/ddl-end-to-end-demo/end-to-end/california/train\n",
+      "Copied /tmp/val.parquet -> /mnt/data/ddl-end-to-end-demo/end-to-end/california/val\n",
+      "Copied /tmp/test.parquet -> /mnt/data/ddl-end-to-end-demo/end-to-end/california/test\n"
+     ]
+    }
+   ],
+   "source": [
+    "def copy_file_with_dirs(src_file, dest_file):\n",
+    "    \"\"\"\n",
+    "    Copy a file from src_file to dest_file, creating destination\n",
+    "    folders if they don't exist.\n",
+    "    \"\"\"\n",
+    "    # Ensure destination directory exists\n",
+    "    dest_dir = os.path.dirname(dest_file)\n",
+    "    os.makedirs(dest_dir, exist_ok=True)\n",
+    "\n",
+    "    # Copy the file\n",
+    "    shutil.copy2(src_file, dest_file)  # copy2 preserves metadata\n",
+    "    print(f\"Copied {src_file} -> {dest_file}\")\n",
+    "\n",
+    "\n",
+    "src = f\"/tmp/train.parquet\"\n",
+    "dest = f\"{ROOT_DOMINO_DATASET_FOLDER}/{DATASET_NAME}/end-to-end/california/train\"\n",
+    "copy_file_with_dirs(src, dest)\n",
+    "\n",
+    "src = f\"/tmp/val.parquet\"\n",
+    "dest = f\"{ROOT_DOMINO_DATASET_FOLDER}/{DATASET_NAME}/end-to-end/california/val\"\n",
+    "copy_file_with_dirs(src, dest)\n",
+    "\n",
+    "src = f\"/tmp/test.parquet\"\n",
+    "dest = f\"{ROOT_DOMINO_DATASET_FOLDER}/{DATASET_NAME}/end-to-end/california/test\"\n",
+    "copy_file_with_dirs(src, dest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "1adda697-3841-450e-98f4-bed31db79159",
    "metadata": {},
    "outputs": [],
@@ -137,7 +242,8 @@
     "\n",
     "def _s3p(root: str, sub: str) -> str:\n",
     "    \"\"\"Safe join for S3/posix URIs.\"\"\"\n",
-    "    return f\"{root.rstrip('/')}/{sub.lstrip('/')}\"\n",
+    "    val = f\"{root.rstrip('/')}/{sub.lstrip('/')}\"\n",
+    "    return val \n",
     "\n",
     "\n",
     "def read_parquet_to_pandas(uri: str, columns=None, limit: int | None = None) -> pd.DataFrame:\n",
@@ -388,36 +494,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41ee926e-ca00-486d-af2c-53cd603c4b3d",
+   "id": "7149bc2b-690e-4cc7-8408-225f28f2b55d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ddl_cluster_scaling_client.scale_cluster(cluster_kind=\"rayclusters\",worker_hw_tier_name=\"Medium\", replicas=4)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d55bb35-622c-48cc-8204-fc219791c577",
+   "id": "2522d26e-854b-43f2-b874-ecd7be87d9c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ddl_cluster_scaling_client.wait_until_scaling_complete(cluster_kind=\"rayclusters\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99ab02e5-1bff-4223-a424-8a1a78496bd9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils import ddl_cluster_scaling_client\n",
-    "j = ddl_cluster_scaling_client.restart_head_node(cluster_kind=\"rayclusters\")\n",
-    "restarts_at = j['started_at']\n",
-    "print(restarts_at)\n",
-    "ddl_cluster_scaling_client.restart_head_node_status(cluster_kind=\"rayclusters\",restarted_since=restarts_at)\n",
-    "ddl_cluster_scaling_client.wait_until_node_restarted(cluster_kind=\"rayclusters\",restarted_since=restarts_at)"
+    "which_env=\"local\" #Picks the appropriate hydra config file"
    ]
   },
   {
@@ -433,11 +522,13 @@
     "import os\n",
     "# Point Hydra to your conf/ directory\n",
     "with initialize(config_path=\"../conf\"):\n",
-    "    cfg = compose(config_name=\"config\", overrides=[\"env=dev\"])\n",
+    "    cfg = compose(config_name=\"config\", overrides=[f\"env={which_env}\"])\n",
     "    #print(f\"Running in {cfg.env} environment\")\n",
     "    #print(OmegaConf.to_yaml(cfg, resolve=True))\n",
     "    \n",
     "    app_name = cfg.app.name\n",
+    "\n",
+    "    #For dev we use datasets\n",
     "    data_dir = cfg.app.data_dir\n",
     "    experiment_name = cfg.mlflow.experiment_name    \n",
     "    model_name = cfg.mlflow.model_name    \n",
@@ -459,6 +550,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## All AWS Env variables are redundant when using locally\n",
     "\n",
     "RAY_JOB_ENV = {\n",
     "    \"AWS_ROLE_ARN\": os.environ.get(\"AWS_ROLE_ARN\", \"\"),\n",
@@ -475,19 +567,7 @@
     "\n",
     "main(experiment_name=experiment_name,data_dir=data_dir, \n",
     "     model_name=model_name,model_desc=model_desc,\n",
-    "     num_workers=4, cpus_per_worker=1,DEV_FAST=dev_fast)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a6275c8-9ca7-4900-ab60-de5a420e82f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils import ddl_cluster_scaling_client\n",
-    "ddl_cluster_scaling_client.scale_cluster(cluster_kind=\"rayclusters\",worker_hw_tier_name=\"Small\",replicas=1)\n",
-    "ddl_cluster_scaling_client.wait_until_scaling_complete(cluster_kind=\"rayclusters\")"
+    "     num_workers=ray_workers, cpus_per_worker=cpus_per_worker,DEV_FAST=dev_fast)"
    ]
   },
   {
@@ -548,15 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0a23211-b6aa-469e-878f-b19ec0943134",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10dd3a8b-6669-45fa-9368-dc722d74746c",
+   "id": "65fd9c4b-94c5-44b8-9a58-51cbfbc16361",
    "metadata": {},
    "outputs": [],
    "source": []
