--- a/notebooks/cluster_scaler_client.ipynb
+++ b/notebooks/cluster_scaler_client.ipynb
@@ -191,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ddl_cluster_scaling_client.wait_until_scaling_complete(cluster_kind=cluster_kind,scale_start_ts=restart_ts)"
+    "ddl_cluster_scaling_client.wait_until_scaling_complete(cluster_kind=cluster_kind)"
    ]
   },
   {
@@ -256,7 +256,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "ddl_cluster_scaling_client.get_cluster_restart_status(cluster_kind = \"rayclusters\",node_type =\"worker\",restart_ts=current_time)"
+    "ddl_cluster_scaling_client.get_cluster_restart_status(cluster_kind = \"rayclusters\",node_type =\"worker\")"
    ]
   },
   {
@@ -266,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ddl_cluster_scaling_client.get_cluster_restart_status(cluster_kind = \"rayclusters\",node_type =\"head\",restart_ts=current_time)"
+    "ddl_cluster_scaling_client.get_cluster_restart_status(cluster_kind = \"rayclusters\",node_type =\"head\")"
    ]
   },
   {
