--- a/notebooks/execute_domino_job.ipynb
+++ b/notebooks/execute_domino_job.ipynb
@@ -90,7 +90,7 @@
     "project_owner = os.environ['DOMINO_PROJECT_OWNER']\n",
     "project_name = os.environ['DOMINO_PROJECT_NAME']\n",
     "project_id = f\"{project_owner}/{project_name}\"\n",
-    "domino = Domino(project=project_id,auth_token=svc_token,host=domino_external_url)\n",
+    "\n",
     "#domino = Domino(\"wadkars/ddl-end-to-end-demo\")"
    ]
   },
@@ -100,7 +100,9 @@
    "id": "0a511364-d244-423f-a528-58c1cf63ebdf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "domino = Domino(project=project_id,auth_token=svc_token,host=domino_external_url)"
+   ]
   },
   {
    "cell_type": "code",
