--- a/notebooks/basic_ray_job.ipynb
+++ b/notebooks/basic_ray_job.ipynb
@@ -12,6 +12,128 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "07c45f93-f246-40d0-8f49-78e0a249c4cc",
+   "metadata": {},
+   "source": [
+    "## Create Domino Environments\n",
+    "\n",
+    "**Workspace Environment**\n",
+    "\n",
+    "**Base Env** - `quay.io/domino/domino-ray-environment:ubuntu22-py3.10-r4.4-ray2.36.0-domino6.0`\n",
+    "\n",
+    "**Dockerfile**\n",
+    "```\n",
+    "USER root\n",
+    "RUN apt update && apt install -y unixodbc unixodbc-dev\n",
+    "RUN pip install h11==0.16.0\n",
+    "RUN pip install pyarrow==14.0.2\n",
+    "RUN pip install hyperopt\n",
+    "RUN pip uninstall -y bson\n",
+    "RUN pip install pymongo\n",
+    "RUN pip install -q \"xgboost>=2.0,<3\"\n",
+    "RUN pip install hydra-core \n",
+    "RUN pip install --no-cache-dir -q \"torch==2.3.1\" \"torchvision==0.18.1\" \"torchaudio==2.3.1\" \"pyopenssl<24\" \"cryptography<42\"\n",
+    "```\n",
+    "\n",
+    "Make sure to add the **pluggable workspace tools**\n",
+    "```\n",
+    "jupyter:\n",
+    "  title: \"Jupyter (Python, R, Julia)\"\n",
+    "  iconUrl: \"/assets/images/workspace-logos/Jupyter.svg\"\n",
+    "  start: [ \"/opt/domino/workspaces/jupyter/start\" ]\n",
+    "  supportedFileExtensions: [ \".ipynb\" ]\n",
+    "  httpProxy:\n",
+    "    port: 8888\n",
+    "    rewrite: false\n",
+    "    internalPath: \"/{{ownerUsername}}/{{projectName}}/{{sessionPathComponent}}/{{runId}}/{{#if pathToOpen}}tree/{{pathToOpen}}{{/if}}\"\n",
+    "    requireSubdomain: false\n",
+    "jupyterlab:\n",
+    "  title: \"JupyterLab\"\n",
+    "  iconUrl: \"/assets/images/workspace-logos/jupyterlab.svg\"\n",
+    "  start: [  \"/opt/domino/workspaces/jupyterlab/start\" ]\n",
+    "  httpProxy:\n",
+    "    internalPath: \"/{{ownerUsername}}/{{projectName}}/{{sessionPathComponent}}/{{runId}}/{{#if pathToOpen}}tree/{{pathToOpen}}{{/if}}\"\n",
+    "    port: 8888\n",
+    "    rewrite: false\n",
+    "    requireSubdomain: false\n",
+    "vscode:\n",
+    "  title: \"vscode\"\n",
+    "  iconUrl: \"/assets/images/workspace-logos/vscode.svg\"\n",
+    "  start: [ \"/opt/domino/workspaces/vscode/start\" ]\n",
+    "  httpProxy:\n",
+    "    port: 8888\n",
+    "    requireSubdomain: false\n",
+    "rstudio:\n",
+    "  title: \"RStudio\"\n",
+    "  iconUrl: \"/assets/images/workspace-logos/Rstudio.svg\"\n",
+    "  start: [ \"/opt/domino/workspaces/rstudio/start\" ]\n",
+    "  httpProxy:\n",
+    "    port: 8888\n",
+    "    requireSubdomain: false\n",
+    "```\n",
+    "  \n",
+    "\n",
+    "\n",
+    "## Ray cluster environment\n",
+    "\n",
+    "**Base Env** - `quay.io/domino/ray-cluster-environment:ray2.36.0-py3.10-domino6.0`\n",
+    "\n",
+    "**Dockerfile**\n",
+    "\n",
+    "```\n",
+    "USER root\n",
+    "RUN apt update && apt install -y unixodbc unixodbc-dev\n",
+    "RUN /opt/conda/bin/pip install h11==0.16.0\n",
+    "RUN pip install pyarrow==14.0.2\n",
+    "RUN pip install hyperopt\n",
+    "RUN pip uninstall -y bson\n",
+    "RUN pip install pymongo\n",
+    "RUN pip install -q \"xgboost>=2.0,<3\"\n",
+    "RUN pip install hydra-core \n",
+    "RUN pip install --no-cache-dir -q \"torch==2.3.1\" \"torchvision==0.18.1\" \"torchaudio==2.3.1\" \"pyopenssl<24\" \"cryptography<42\"\n",
+    "USER ubuntu    \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f299857-3935-4e11-9083-7e8188fc693f",
+   "metadata": {},
+   "source": [
+    "## Start the workspace\n",
+    "\n",
+    "Start a workspace with a Ray cluster with 3 medium sized worker nodes and 1 small sized head node"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "610c011f-0686-4ab2-8aca-369d7806a9b0",
+   "metadata": {},
+   "source": [
+    "## Pick the configuration file\n",
+    "\n",
+    "We use hydra to run various types of run (Root folder is `/mnt/code/conf`) -\n",
+    "1. `config.yaml` - Default values\n",
+    "2. `env/local.yaml` - Runs in Domino via Domino datasets as a shared location. Uses a small subset of the total data\n",
+    "3. `env/dev.yaml` - Runs with S3 bucket and uses a small subset of the total data\n",
+    "4. `env/test.yaml` - Runs with S3 bucket and uses the full dataset\n",
+    "5. `env/prod.yaml` - Runs with S3 bucket and uses the full dataset\n",
+    "\n",
+    "There is no difference between `test` and `prod`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a093c1ef-1f20-4e1b-84de-891d32ff48f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "which_env=\"local\" #Picks the appropriate hydra config file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1336f048-16eb-441b-9c12-74309c613578",
